# custom-knowledge-based-AI-assistant

./: config.yaml  pyproject.toml  streamlit_app.py
ai_assistant/: __init__.py  chat_bot.py
config/: config.py
data/: Critique of Pure Reason.md  The Republic.md
script/: insert_docs.py
